--- a/default.project.json
+++ b/default.project.json
@@ -10,19 +10,33 @@
 
         "Packages": {
           "$path": "Packages"
+        },
+        
+        "StandService": {
+          "$path": "src/common/StandService",
+          "ContactServer": {
+            "$className": "RemoteFunction"
+          }
         }
       }
     },
 
+    "ServerStorage": {
+      "private": {
+        "$className": "Folder",
+        "$ignoreUnknownInstances": true
+      }
+    },
+
     "ServerScriptService": {
-      "Server": {
+      "server": {
         "$path": "src/server"
       }
     },
 
     "StarterPlayer": {
       "StarterPlayerScripts": {
-        "Client": {
+        "client": {
           "$path": "src/client"
         }
       }
