--- a/wally.toml
+++ b/wally.toml
@@ -5,6 +5,7 @@ registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
+component = "sleitnick/component@2.4.4"
 promise = "evaera/promise@4.0.0"
 trove = "sleitnick/trove@0.3.0"
 knit = "sleitnick/knit@1.4.4"
